--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,23 +1,17 @@
 {% extends 'layouts/base.html'%}
+
 {% block content %}
-<main>
-    <div class="container-about">
-        <h3 class="h3-heading">About</h3>
-        <p class="first-p">This is the third milestone project of the fullstack software development course of Code Institute. It is the
-            first
-            'full stack' project combining a database, a backend and a frontend. The aim is to demonstrate a full
-            understanding
-            of Python, MongoDB and Flask. </p>
+    <main>
 
-        <p>The project revolves around the mastery of the CRUD concept: <span class="bold">C</span>reate, <span
-                class="bold">R</span>ead, <span class="bold">U</span>pdate and <span class="bold">D</span>elete. Being
-            able to
-            use this concept, opens a whole new world of possibilities to create web apps.</p>
+        <div class="container-about">
 
-        <p class="last-p">Do you have a question, suggestion or remark? Let me know!</p>
+            <h3 class="h3-heading">About</h3>
+            <p class="first-p">This is the third milestone project of the fullstack software development course of Code Institute. It is the first 'full stack' project combining a database, a backend and a frontend. The aim is to demonstrate a full understanding of Python, MongoDB and Flask. </p>
+            <p>The project revolves around the mastery of the CRUD concept: <span class="bold">C</span>reate, <span class="bold">R</span>ead, <span class="bold">U</span>pdate and <span class="bold">D</span>elete. Being able to use this concept, opens a whole new world of possibilities to create web apps.</p>
+            <p class="last-p">Do you have a question, suggestion or remark? Let me know!</p>
+            <a href="{{url_for('contact')}}" class="waves-effect waves-light hero-home__btn">contact</a>
 
-        <a href="{{url_for('contact')}}" class="waves-effect waves-light hero-home__btn">contact</a>
-    </div>
-</main>
+        </div>
 
+    </main>
 {% endblock %}
