--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -60,6 +60,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/select.js"></script>
     <script>
 
       $(document).ready(function () {
